objects/ASI_FOC_Free_Goods_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_FOC_Deliver_to_Address_Line_2__c</fullName>
        <label>Deliver to Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Deliver_to_Address_Line_3__c</fullName>
        <label>Deliver to Address Line 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Address__c</fullName>
        <formula>ASI_FOC_Account_DA__r.ASI_HK_CRM_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Instruction_1__c</fullName>
        <label>Delivery Instruction 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Instruction_2__c</fullName>
        <label>Delivery Instruction 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Remarks__c</fullName>
        <label>Delivery Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Time_1__c</fullName>
        <label>Delivery Time 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Time_2__c</fullName>
        <label>Delivery Time 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_FOC_Delivery_Window_Instruction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Window_Instruction__c</fullName>
        <label>Delivery Window Instruction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Before</fullName>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
                <value>
                    <fullName>Between</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Zone</label>
        <referenceTo>ASI_FOC_Delivery_Zone__c</referenceTo>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Description__c</fullName>
        <label>Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_District__c</fullName>
        <label>District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_ETA_Date__c</fullName>
        <formula>ASI_FOC_SYS_Approved_Date__c + ASI_FOC_Lead_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Email_Notification_Template__c</fullName>
        <label>Email Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Email_Step_1_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 1 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Email_Step_2_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 2 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Email_Step_3_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 3 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Finance_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Free_Goods_Total_Cost__c</fullName>
        <label>Estimated Amount</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Free_Good_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Function__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_ID_15__c</fullName>
        <formula>LEFT(Id, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID(15)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Instruction__c</fullName>
        <label>Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_JDE_Order_Number__c</fullName>
        <label>JDE Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_JDE_Order_Type_Code__c</fullName>
        <label>JDE Order Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Lead_Time__c</fullName>
        <formula>ASI_FOC_Delivery_Zone__r.ASI_FOC_Delivery_lead_time_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (Day)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Logistic_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logistic Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_MFM_Consumer_AP_PO_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFM PO Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_Is_FOC_PO__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Final, Complete, Partial Paid</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_Net_off_FOC_PO__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_FOC_PO_Remaining_Amount__c</field>
                <operation>greaterOrEqual</operation>
                <value>0</value>
            </filterItems>
            <infoMessage>The PO need to be FOC PO and have available amount for issuing FOC.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>ASI_FOC_Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_MFM_PO_Final_Amount__c</fullName>
        <formula>ASI_FOC_MFM_Consumer_AP_PO_Number__r.ASI_MFM_PO_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFM PO Final Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_MFM_PO_Prefix__c</fullName>
        <label>MFM PO Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_MFM_PO_Remaining_Amount__c</fullName>
        <formula>ASI_FOC_MFM_Consumer_AP_PO_Number__r.ASI_MFM_FOC_PO_Remaining_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFM PO Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_No_Company_Chop_Acceptable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Company Chop Acceptable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Number_of_Saves__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Saves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Order_Status__c</fullName>
        <label>Order Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Others_Please_specify__c</fullName>
        <label>Others, Please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_Final_Amount__c</fullName>
        <formula>ASI_FOC_PO__r.ASI_FOC_PO_Final_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Final Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_Remaining_Amount__c</fullName>
        <formula>ASI_FOC_PO__r.ASI_FOC_PO_Remaining_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_Sub_brand__c</fullName>
        <formula>ASI_FOC_PO__r.ASI_FOC_PO_Sub_brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Sub-brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer A&amp;P PO Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_FOC_PO__c.ASI_FOC_Valid_for_FOC__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_FOC_PO__c</referenceTo>
        <relationshipName>ASI_FOC_Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Pre_Approval_Form_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to CRM Pre-Approval Form, currently used in HK FOC</description>
        <label>Pre-Approval Form Number</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Tasting</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Luxe</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Replacement Stock</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>PRC Owned Event tasting</fullName>
                </value>
                <value>
                    <fullName>3rd party event tie-in</fullName>
                </value>
                <value>
                    <fullName>Product barter</fullName>
                </value>
                <value>
                    <fullName>Promotion Products to indirect sales outlet</fullName>
                </value>
                <value>
                    <fullName>PRC employee tasting</fullName>
                </value>
                <value>
                    <fullName>Replacement Stock &amp; CIQ-Operation only</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Internal usage</fullName>
                </value>
                <value>
                    <fullName>Gifts to 3rd party</fullName>
                </value>
                <value>
                    <fullName>Gifts to employees</fullName>
                </value>
                <value>
                    <fullName>Gifts to non-employees (individual)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Reason_for_Address_Change__c</fullName>
        <label>Reason for Address Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Receipt_Generated_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receipt Generated Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Receiptor_Mobile__c</fullName>
        <label>Recipient Mobile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Receiptor_Name__c</fullName>
        <label>Recipient Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Refer_to_CRM_Order_MKT__c</fullName>
        <label>Refer to CRM Order (Marketing)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Refer_to_CRM_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refer to CRM Order (Sales)</label>
        <referenceTo>ASI_HK_CRM_Sales_Order__c</referenceTo>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Rejected_by_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected by System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Rejected by Logistic</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved by Logistic</fullName>
                </value>
                <value>
                    <fullName>Rejected by Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Trade A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Structure Cost</fullName>
                </value>
                <value>
                    <fullName>Logistic Cost</fullName>
                </value>
                <value>
                    <fullName>Memo</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Duty Free</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Wine/Spirits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_STK_4_Count_Sales_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>STK 4 (Count Sales Volume)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Actual_Amount__c</fullName>
        <label>SYS Actual Amount</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Free_Goods_Actual_Cost__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Approved_Date__c</fullName>
        <label>SYS Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Approved_by_Me__c</fullName>
        <formula>OR(
$User.Id =   ASI_FOC_Approver_1__c,
$User.Id =   ASI_FOC_Approver_2__c,
$User.Id =   ASI_FOC_Approver_3__c,
$User.Id =   ASI_FOC_Approver_4__c,
$User.Id =   ASI_FOC_Approver_5__c,
$User.Id =   ASI_FOC_Approver_6__c,
$User.Id =   ASI_FOC_Approver_7__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS Approved by Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Finance_Comment__c</fullName>
        <label>SYS Finance Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Notified_Sales_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified Sales Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Number_of_Saves__c</fullName>
        <description>For display only</description>
        <formula>ASI_FOC_Number_of_Saves__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Saves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Owner__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Rejected_by_Logistic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS Rejected by Logistic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Request_Line_Information__c</fullName>
        <label>SYS Request Line Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Submitted_Time__c</fullName>
        <label>SYS Submitted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Synced_Lines__c</fullName>
        <label>SYS Synced Lines</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_SO_Actual_Extended_Cost__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Actual_Quantity_Bottle__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_BD_Approval_Items__c</fullName>
        <label>SYS Total BD Approval Items</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Required__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_BD_Approved_Items__c</fullName>
        <label>SYS Total BD Approved Items</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>In Progress, Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_Bottle_Count__c</fullName>
        <label>SYS Total Bottle Count</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Request_Quantity_Bottle__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_Cancel_Item__c</fullName>
        <label>SYS Total Cancel Item</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Cancel_Quantity_PC_BT__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_Lines__c</fullName>
        <label>SYS Total Lines</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_Premium_Item_Count__c</fullName>
        <label>SYS Total Premium Item Count</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Request_Quantity_Bottle__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Is_Premium__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_RequestWithQuantity__c</fullName>
        <label>SYS Total Request Item_With_Quantity</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_ETL_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_Request_Item__c</fullName>
        <label>SYS Total Request Item</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Original_Request_Quantity_PC_BT__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Specify_if_Others__c</fullName>
        <label>Specify if Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Street__c</fullName>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_Approved_By_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Approved_By_Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_Approved_By_Logistic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys Approved By Logistic</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>